syntax = "proto3";
option java_multiple_files = true;
option go_package = "api.v2";

package v2;

message MessagePing {
    int64 timestamp = 1;
}

message MessagePong {
    int64 timestamp = 1;
    string serviceName = 2;
}